--- a/pronostico.html
+++ b/pronostico.html
@@ -8,8 +8,8 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel=stylesheet>
 <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Shadows+Into+Light" rel="stylesheet">
-    <script type="text/javascript" src="Tabla.js"></script>
-    <link rel="stylesheet" href="Tabla.css">
+    <script type="text/javascript" src="pronostico.js"></script>
+    <link rel="stylesheet" href="/asset/css/pronostico.css">
   </head>
   <body>
 
