--- a/pronostico.html
+++ b/pronostico.html
@@ -9,6 +9,8 @@
 <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel=stylesheet>
 <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Shadows+Into+Light" rel="stylesheet">
     <script type="text/javascript" src="/asset/js/pronostico.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <link rel="stylesheet" href="/asset/css/pronostico.css">
   </head>
   <body>
