--- a/login.html
+++ b/login.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="
-/proyectoxxi/asset/css/login.css">
+  <link rel="stylesheet" href="/proyectoxxi/asset/css/login.css">
   <link rel="stylesheet" href="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.css">
 </head>
 <body>
@@ -33,7 +32,6 @@
   <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
   <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
   <script src="https://requenahdz.github.io/firebase/asset/iziToast/init.js"></script>
-  <script src="/
-/proyectoxxi/asset/js/login.js"></script>
+  <script src="/proyectoxxi/asset/js/login.js"></script>
 </body>
 </html>
