--- a/usuarios.html
+++ b/usuarios.html
@@ -4,50 +4,24 @@
   <link rel="stylesheet" href="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.css">
   <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script src="asset/js/usuarios.js"></script>
+  <link rel="stylesheet" href="asset/css/usuarios.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+  <!-- -->
+  <meta charset="utf-8">
+  <script src="https://requenahdz.github.io/firebase/asset/iziToast/init.js"></script>
+  <link rel="stylesheet" href="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.css">
+  <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="semantic/semantic.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <link rel="stylesheet" href="usuarios.css">
   <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
   <script src="usuarios.js"></script>
   <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
-  <meta charset="utf-8">
-  <style>
-  .cabecera{
-    margin-bottom:5em;
-  }
-  #imagen{
-  	height: 300px;
-  	width: 350px;
-  	background-repeat: no-repeat;
-  	background-size: contain;
-  	background-position: center;
-    margin:auto;
-    background-image:url(
-http://semantic-ui.com/images/wireframe/image.png);
-  }
-  #navegacion .container div{
-    color:white;
-  }
-  .imagen{
-    width:3.2em;
-    height:3.2em;
-    border-radius: 50%;
-    background-size:contain;
-    background-position: center;
-    margin:auto;
-  }
-  #ingresado{
-    width:50px;
-    height:50px;
-    background-position: center;
-    background-size:contain;
-    border-radius:50%;
-    background-repeat:no-repeat;
-    background-image:url(http://semantic-ui.com/images/wireframe/image.png);
-  }
-  header{
-    margin-top:7em;
-  }
-  </style>
 </head>
 <body>
   <nav class="ui fixed menu inverted"id="navegacion">
