--- a/partidos.html
+++ b/partidos.html
@@ -15,7 +15,9 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
-    <script src="partidos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/css/partidos.js">
     <style media="screen">
       .logoEquipo{
         width:15px;
@@ -23,8 +25,29 @@
         background-size: contain;
         margin-right: 5px;
       }
+      #navegacion .container div,a{
+         color:white;
+       }
+       .imagen{
+         width:3.2em;
+         height:3.2em;
+         border-radius: 50%;
+         background-size:contain;
+         background-position: center;
+         margin:auto;
+       }
+       #ingresado{
+         width:50px;
+         height:50px;
+         background-position: center;
+         background-size:contain;
+         border-radius:50%;
+         background-repeat:no-repeat;
+         background-image:url(http://semantic-ui.com/images/wireframe/image.png);
+       }
     </style>
   </head>
+
   <body>
     <nav class="ui fixed menu inverted"id="navegacion">
      <div class="ui container">
