--- a/partidos.html
+++ b/partidos.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Jornadas | Quíñela</title>
-    <link rel="stylesheet" type="text/css" href="../semantic.min.css">
     <link rel="stylesheet" href="https://semantic-ui.com/dist/components/icon.css">
     <link rel="stylesheet" href="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.css">
     <script
@@ -11,13 +10,12 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="../semantic.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <link rel="stylesheet" href="/assets/css/login.css">
-    <link rel="stylesheet" href="/assets/css/partidos.js">
+    <link rel="stylesheet" href="/proyectoxxi/assets/css/login.css">
+    <script src="stylesheet" href="/proyectoxxi/assets/css/partidos.js"></script>
     <style media="screen">
       .logoEquipo{
         width:15px;
