--- a/usuarios.html
+++ b/usuarios.html
@@ -17,10 +17,10 @@
       <a href="#" class="header item">
         Proyecto XXI</a>
       <a href="#"class="Inicio item">Inicio</a>
-      <a href="#" class="vistaAdministrador item">Clubs</a>
-      <a href="#" class="item">Jornadas</a>
+      <a href="equipos.html" class="vistaAdministrador item">Clubs</a>
+      <a href="partidos.html" class="item">Jornadas</a>
       <a href="#" class="item">Resultados</a>
-      <a href="#" class="item">Posiciones</a>
+      <a href="pronostico.html" class="item">Posiciones</a>
       <div class="usuario item right aligned">
         <div class="ui pointing dropdown link item">
           <span id="nombreUsuario" class="text">Tu nombre</span>
