--- a/partidos.html
+++ b/partidos.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Jornadas | Quíñela</title>
     <link rel="stylesheet" href="https://semantic-ui.com/dist/components/icon.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" href="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.css">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
