--- a/pronostico.html
+++ b/pronostico.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <!-- https://github.com/requenahdz/firebase -->
-    <link rel="stylesheet" type="text/css" href="Semantic/semantic.min.css">
+
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="/asset/js/pronostico.js"></script>
+    <script type="text/javascript" src="/proyectoxxi/asset/js/pronostico.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <link rel="stylesheet" href="/asset/css/pronostico.css">
+    <link rel="stylesheet" href="/proyectoxxi/asset/css/pronostico.css">
   </head>
   <body>
 
