--- a/equipos.html
+++ b/equipos.html
@@ -10,8 +10,8 @@
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <script src="https://requenahdz.github.io/firebase/asset/firebase/init.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <link rel="stylesheet" href="/asset/css/equipos.css">
-  <script src="/asset/js/equipos.js"></script>
+  <link rel="stylesheet" href="/proyectoxxi/asset/css/equipos.css">
+  <script src="/proyectoxxi/asset/js/equipos.js"></script>
 
   <!-- -->
 
@@ -20,11 +20,11 @@
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <!-- <script src="Semantic/semantic.min.js"></script> -->
+  <script src="Semantic/semantic.min.js"></script>
   <link rel="stylesheet" href="https://semantic-ui.com/dist/components/icon.css">
-  <!-- <link rel="stylesheet" type="text/css" href="Semantic/semantic.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="Semantic/semantic.min.css">
   <link rel="stylesheet" href="/semantic/dist/components/icon.css">
-  <!-- <link rel="stylesheet" href="equipos.css"> -->
+  <link rel="stylesheet" href="equipos.css">
 </head>
 <body>
   <nav class="ui fixed menu inverted"id="navegacion">
