--- a/partidos.html
+++ b/partidos.html
@@ -15,8 +15,8 @@
     <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <link rel="stylesheet" href="/proyectoxxi/assets/css/login.css">
-    <script src="stylesheet" href="/proyectoxxi/assets/css/partidos.js"></script>
+    <link rel="stylesheet" href="proyectoxxi/assets/css/login.css">
+    <script src="proyectoxxi/assets/css/partidos.js"></script>
     <style media="screen">
       .logoEquipo{
         width:15px;
