--- a/equipos.html
+++ b/equipos.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" href="/proyectoxxi/asset/css/equipos.css">
   <script src="/proyectoxxi/asset/js/equipos.js"></script>
+  <script src="asset/js/usuarios.js"></script>
 
   <!-- -->
 
