--- a/partidos.html
+++ b/partidos.html
@@ -16,6 +16,7 @@
     <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="/proyectoxxi/asset/js/partidos.js"></script>
+    <script src="/proyectoxxi/asset/js/usuarios.js"></script>
     <style media="screen">
       .logoEquipo{
         width:15px;
