--- a/pronostico.html
+++ b/pronostico.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title></title>
     <!-- https://github.com/requenahdz/firebase -->
-
+<!--
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="/proyectoxxi/asset/js/pronostico.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script> -->
     <link rel="stylesheet" href="/proyectoxxi/asset/css/pronostico.css">
+    <script src="/proyectoxxi/asset/js/pronostico.js"></script>
   </head>
   <body>
 
@@ -66,7 +67,11 @@
 </div>
 
     </div>
-    <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-    <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
+  <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
+  <script src="https://requenahdz.github.io/firebase/asset/iziToast/init.js"></script>
   </body>
 </html>
