--- a/equipos.html
+++ b/equipos.html
@@ -3,32 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Equipos</title>
-  <script src="https://github.com/requenahdz/firebase/blob/master/asset/iziToast/init.js"></script>
-  <script src="https://github.com/requenahdz/firebase/blob/master/asset/iziToast/iziToast.min.js"></script>
-  <script src="https://github.com/requenahdz/firebase/blob/master/asset/iziToast/iziToast.min.css"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-  <script src="https://requenahdz.github.io/firebase/asset/firebase/init.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+  <link rel="stylesheet" href="/proyectoxxi/asset/iziToast/iziToast.min.css">
   <link rel="stylesheet" href="/proyectoxxi/asset/css/equipos.css">
-  <script src="/proyectoxxi/asset/js/equipos.js"></script>
-  <script src="asset/js/usuarios.js"></script>
-
-  <!-- -->
-
-  <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="Semantic/semantic.min.js"></script>
-  <link rel="stylesheet" href="https://semantic-ui.com/dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="Semantic/semantic.min.css">
-  <link rel="stylesheet" href="/semantic/dist/components/icon.css">
-  <link rel="stylesheet" href="equipos.css">
 </head>
 <body>
-  <nav class="ui fixed menu inverted"id="navegacion">
+  <nav class="ui fixed menu inverted" id="navegacion">
     <div class="ui container">
       <a href="#" class="header item">
         Proyecto XXI</a>
@@ -140,5 +120,13 @@
             </div>
           </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+        <script src="/proyectoxxi/asset/iziToast/iziToast.min.js"></script>
+        <script src="/proyectoxxi/asset/iziToast/init.js"></script>
+        <script src="/proyectoxxi/asset/firebase/init.js"></script>
+        <script src="/proyectoxxi/asset/js/usuarios.js"></script>
+        <script src="/proyectoxxi/asset/js/equipos.js"></script>
       </body>
       </html>
