--- a/partidos.html
+++ b/partidos.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="ui fluid container" style="margin-top:60px">
-        <table class="ui table" style="margin:20px 0px;" id="tabla">
+        <table class="ui table" style="margin:20px 0px;" id="tablaJornada">
           <thead style="text-align:center;font-size:13px">
             <tr><th>JORNADA</th>
             <th>FECHA INICIO</th>
