--- a/usuarios.html
+++ b/usuarios.html
@@ -113,7 +113,7 @@
     </div>
   </div>
   <section style="margin-bottom:1em" class="ui container seccion1">
-    <table class="ui center aligned unstackable table" id="tabla">
+    <table class="ui center aligned unstackable table" id="tablaUsuarios">
       <thead>
         <tr>
           <th>Imagen de Peril</th>
