--- a/equipos.html
+++ b/equipos.html
@@ -46,7 +46,7 @@
         Nuevo
       </button>
       <br><br><br>
-      <table class="ui aligned centered center unstackable table" id="tabla">
+      <table class="ui aligned centered center unstackable table" id="Equipostabla">
         <thead>
           <tr><th>Logo</th>
             <th>Nombre</th>
