--- a/pronostico.html
+++ b/pronostico.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <link rel="stylesheet" href="/proyectoxxi/asset/css/pronostico.css">
     <script src="/proyectoxxi/asset/js/pronostico.js"></script>
+
+   <script src="asset/js/usuarios.js"></script>
+
   </head>
   <body>
 
