--- a/partidos.html
+++ b/partidos.html
@@ -15,8 +15,11 @@
     <script src="https://requenahdz.github.io/firebase/js/firebase.js"></script>
     <script src="https://requenahdz.github.io/firebase/asset/iziToast/iziToast.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <!-- <script src="../semantic.min.js"></script>
+    <script src="partidos.js"></script>
+    <link rel="stylesheet" href="../semantic.min.js"> -->
     <script src="/proyectoxxi/asset/js/partidos.js"></script>
-    <!-- <script src="/proyectoxxi/asset/js/usuarios.js"></script> -->
+    <script src="/proyectoxxi/asset/js/usuarios.js"></script>
     <style media="screen">
       .logoEquipo{
         width:15px;
