--- a/equipos.html
+++ b/equipos.html
@@ -12,8 +12,8 @@
   <script src="/proyectoxxi/asset/iziToast/iziToast.min.js"></script>
   <script src="/proyectoxxi/asset/iziToast/init.js"></script>
   <script src="/proyectoxxi/asset/firebase/init.js"></script>
-  <!-- <script src="/proyectoxxi/asset/js/usuarios.js"></script> -->
   <script src="/proyectoxxi/asset/js/equipos.js"></script>
+   <script src="/proyectoxxi/asset/js/usuarios.js"></script>
 </head>
 <body>
   <nav class="ui fixed menu inverted" id="navegacion">
