--- a/equipos.html
+++ b/equipos.html
@@ -12,7 +12,7 @@
   <script src="/proyectoxxi/asset/iziToast/iziToast.min.js"></script>
   <script src="/proyectoxxi/asset/iziToast/init.js"></script>
   <script src="/proyectoxxi/asset/firebase/init.js"></script>
-  <script src="/proyectoxxi/asset/js/equipos.js"></script>
+  <script src="/asset/js/equipos.js"></script>
    <script src="/proyectoxxi/asset/js/usuarios.js"></script>
 </head>
 <body>
