--- a/equipos.html
+++ b/equipos.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" href="/proyectoxxi/asset/iziToast/iziToast.min.css">
   <link rel="stylesheet" href="/proyectoxxi/asset/css/equipos.css">
-  <script src="/asset/js/equipos.js"></script>
+  <script src="asset/js/equipos.js"></script>
 </head>
 <body>
   <nav class="ui fixed menu inverted" id="navegacion">
@@ -124,10 +124,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-        <script src="/proyectoxxi/asset/iziToast/iziToast.min.js"></script>
-        <script src="/proyectoxxi/asset/iziToast/init.js"></script>
-        <script src="/proyectoxxi/asset/firebase/init.js"></script>
+        <script src="proyectoxxi/asset/iziToast/iziToast.min.js"></script>
+        <script src="proyectoxxi/asset/iziToast/init.js"></script>
+        <script src="proyectoxxi/asset/firebase/init.js"></script>
 
-        <script src="/asset/js/usuarios.js"></script>
+        <script src="asset/js/usuarios.js"></script>
       </body>
       </html>
