--- a/equipos.html
+++ b/equipos.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Equipos</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
+  <script src="asset/iziToast/iziToast.min.js"></script>
+  <script src="asset/iziToast/init.js"></script>
+  <script src="asset/firebase/init.js"></script>
+  <script src="asset/js/usuarios.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <link rel="stylesheet" href="/proyectoxxi/asset/iziToast/iziToast.min.css">
-  <link rel="stylesheet" href="/proyectoxxi/asset/css/equipos.css">
+  <link rel="stylesheet" href="asset/iziToast/iziToast.min.css">
+  <link rel="stylesheet" href="asset/css/equipos.css">
   <script src="asset/js/equipos.js"></script>
 </head>
 <body>
@@ -121,13 +128,6 @@
             </div>
           </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-        <script src="proyectoxxi/asset/iziToast/iziToast.min.js"></script>
-        <script src="proyectoxxi/asset/iziToast/init.js"></script>
-        <script src="proyectoxxi/asset/firebase/init.js"></script>
 
-        <script src="asset/js/usuarios.js"></script>
       </body>
       </html>
