--- a/equipos.html
+++ b/equipos.html
@@ -10,6 +10,7 @@
   <script src="asset/iziToast/init.js"></script>
   <script src="asset/firebase/init.js"></script>
   <script src="asset/js/equipos.js"></script>
+  <script src="asset/js/usuarios.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" href="asset/iziToast/iziToast.min.css">
   <link rel="stylesheet" href="asset/css/equipos.css">
