--- a/equipos.html
+++ b/equipos.html
@@ -72,7 +72,7 @@
                 <p>Los campos marcados con * son obligatorios</p>
               </div>
               <br>
-              <form class="ui fluid form" id="form">
+              <form class="ui fluid form" id="Equiposform">
                 <div class="field">
                   <input type="hidden" name="key" value="0" id="key">
                 </div>
