--- a/usuarios.html
+++ b/usuarios.html
@@ -116,7 +116,7 @@
     <table class="ui center aligned unstackable table" id="tablaUsuarios">
       <thead>
         <tr>
-          <th>Imagen de Peril</th>
+          <th>Imagen de Perfil</th>
           <th>Nombre</th>
           <th>Apellido Paterno</th>
           <th>Apellido Materno</th>
