--- a/usuarios.html
+++ b/usuarios.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 </head>
 <body>
-  <nav class="ui fixed menu inverted"id="navegacion">
+  <nav id="nav"></nav>
     <div class="ui container">
       <a href="#" class="header item">
         Proyecto XXI</a>
