--- a/usuarios.html
+++ b/usuarios.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 </head>
 <body>
-  <nav id="nav"></nav>
+  <nav class="ui fixed menu inverted" id="nav"></nav>
   <header class="cabecera ui container">
     <h1 class="ui header">Usuarios</h1>
     <div class="ui breadcrumb">
